k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: snapgram

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: us-central1-docker.pkg.dev/PROJECT_ID/snapgram/snapgram-backend:latest

          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: snapgram

spec:
  selector:
    app: backend

  ports:
    - port
